--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:zoobfuscator.helloWorld"
+    "onCommand:zoobfuscator.helloWorld",
+    "onCommand:zoobfuscator.renameAll"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -18,6 +19,10 @@
       {
         "command": "zoobfuscator.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "zoobfuscator.renameAll",
+        "title": "Rename All"
       }
     ]
   },
